--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,7 @@ name: Build
 on:
   workflow_dispatch:
   push:
-    branches:
-      - "v0.10.7-dev"
-    # tags: ["v*.*.*"]
+    tags: ["v*.*.*"]
 
 jobs:
   build:
